# HexHelper

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/base64/: Base64Decoder.h  Base64Encoder.h
src/encoding/: ASCII.h  UNICODE.h
src/hex/: Hex32.h  Hex64.h  HexConverter.h
src/ui/: DisplayManager.h
src/utils/: Utils.cpp  Utils.h
